# INTO-GROUP

./: .env  .gitignore  README.md  app.py  config.py  decorator.py  pyproject.toml  requirements.txt
models/: bot.py  database.py  task.py  user.py
routes/: auth.py  bots.py  chat.py  clients.py  tasks.py
socket_handlers/: chat_handlers.py
templates/: autorize.html  bots.html  chat.html  main.html  tasks.html
