[project]
name = "into-group"
version = "0.1.0"
description = ""
authors = [
    {name = "Grachya Ayvazyan",email = "delovoygrach@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
